--- a/exerciciosprogramacao/ex-js/ex35/index.html
+++ b/exerciciosprogramacao/ex-js/ex35/index.html
@@ -22,14 +22,13 @@
     </style>
 </head>
 <body>
+    
     <div class="div">
-        <span class="horas">00:</span>
-        <span class="minutos">00:</span>
-        <span class="segundos">00</span>
+        00:00:00
     </div>
-    <div class="btn">
+    <!-- <div class="btn">
         <button>Iniciar</button>
-    </div>
+    </div> -->
 
     <script src="app.js"></script>
 </body>
